--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,46 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Welcome to My Portfolio</h1>
     <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <div class="logo">My Portfolio</div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>IT Specialist with expertise in penetration testing, cybersecurity, and scripting. Passionate about home lab setups and automating IT processes.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Home Lab Setup:</strong> Configured a virtualization environment with Proxmox and Kubernetes.</li>
-      <li><strong>Penetration Testing:</strong> Conducted OWASP Top 10 vulnerability assessments and CTF challenges.</li>
-      <li><strong>Scripts:</strong> Automated system reporting and recovery drive creation with PowerShell and CMD scripts.</li>
-    </ul>
-  </section>
-
-  <section id="blog">
-    <h2>Blog</h2>
-    <p>Coming soon! Tips, write-ups, and insights into IT security and penetration testing.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Reach me on <a href="https://linkedin.com" target="_blank">LinkedIn</a> or via email at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
-  </section>
+  <main>
+    <section id="about">
+      <h1>Welcome to My Portfolio</h1>
+      <p>
+        I'm an IT Specialist passionate about penetration testing, home labs, and automating IT processes. Explore my work and skills here.
+      </p>
+      <a href="#projects" class="btn">Explore Projects</a>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2024 Your Name. Built with ❤️ for GitHub Pages.</p>
+    <div class="social-icons">
+      <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+      <a href="https://github.com" target="_blank">GitHub</a>
+      <a href="mailto:your-email@example.com">Email</a>
+    </div>
   </footer>
 </body>
 </html>
