--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
   <footer>
     <p>Find me on:</p>
     <div class="social-links">
-      <a href="https://github.com/your-username" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
-      <a href="https://twitter.com/your-handle" target="_blank">Twitter</a>
+      <a href="https://github.com/MetalShellImpaler" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/anael-russo/" target="_blank">LinkedIn</a>
     </div>
   </footer>
 
