--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Anael Russo's IT Portfolio website</h1>
+    <h1>Welcome to Anael Russo's IT Portfolio Website</h1>
     <p>Explore my skills, projects, and expertise in an interactive Linux terminal.</p>
   </header>
 
@@ -23,13 +23,13 @@
           <span class="terminal-title">Linux Terminal</span>
         </div>
       </div>
-      <div id="terminal">
-        <div id="terminal-output"></div>
-        <div id="terminal-input">
-          <span class="prompt">$</span>
-          <input type="text" id="input-line" autocomplete="off">
-        </div>
+
+      <div id="terminal-input">
+        <span class="prompt">$</span>
+        <input type="text" id="input-line" autocomplete="off" placeholder="Type your command...">
       </div>
+
+      <div id="terminal-output"></div>
     </div>
   </main>
 
