--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="social-links">
       <a href="https://github.com/MetalShellImpaler" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/anael-russo/" target="_blank">LinkedIn</a>
+      <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=889239" style='border:none;'></iframe>
     </div>
   </footer>
 
