--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">  
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="terminal.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anael Russo Terminal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
