--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Bio Section -->
         <section class="bio-section">
             <div class="profile-container">
-                <!-- Profile Image Placeholder -->
+                <!-- Profile Image  -->
                 <!-- <div class="profile-image"></div> -->
 
                 <!-- Bio Content -->
@@ -71,12 +71,12 @@ Ability to Work Under Pressure <br>
                         <span class="minimize"></span>
                         <span class="maximize"></span>
                     </div>
-                    <div class="terminal-title">guest@portfolio-server</div>
+                    <div class="terminal-title">guest@AnaelRusso-server</div>
                 </div>
                 <div class="terminal-body">
                     <div id="output"></div>
                     <div class="input-line">
-                        <span class="prompt">guest@portfolio-server:~$</span>
+                        <span class="prompt">guest@AnaelRusso-server:~$</span>
                         <input type="text" id="command-input" autofocus spellcheck="false">
                     </div>
                 </div>
