--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                     <!-- About Me Section -->
                     <div class="about-me">
                         <h3>About Me</h3>
-                         🌐🔒Driven and skilled in Cyber Security with hands-on experience in IT security and system administration.
-Proven ability to identify and address security risks through comprehensive assessments.
-Proficient in utilizing advanced tools and techniques to enhance security posture.
-Solid IT background with a B.Ed and specialized cybersecurity training.🛡️
+                         🌐🔒Driven and skilled in Cyber Security with hands-on experience in IT security and
+system administration. Proven ability to identify and address security risks through
+comprehensive assessments. Experienced with SASE, SaaS, and IaaS solutions to
+enhance security & operations. Solid IT background with a B.Ed and specialized
+cybersecurity training.🛡️
                     </div>
 
                     <!-- Skills Section -->
