--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <!-- About Me Section -->
                     <div class="about-me">
                         <h3>About Me</h3>
-                         🌐🔒Driven and skilled in Cyber Security with hands-on experience in IT security and
-system administration. Proven ability to identify and address security risks through
-comprehensive assessments. Experienced with SASE, SaaS, and IaaS solutions to
-enhance security & operations. Solid IT background with a B.Ed and specialized
-cybersecurity training.🛡️
+                         🌐🔒Passionate and skilled in cybersecurity with hands-on experience in IT and security
+administration. Hands-on expertise in securing and managing cloud-based and internal IT infrastructure. 
+Experienced with SASE, SaaS, IaaS and modern endpoint management solutions to enhance security & operations. 
+Showcasing technical projects and automation scripts on GitHub. 
+Solid IT background with a B.Ed and specialized cybersecurity training.🛡️
                     </div>
 
                     <!-- Skills Section -->
