--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <!-- About Me Section -->
                     <div class="about-me">
                         <h3>About Me</h3>
-                         🌐🔒Passionate and skilled in cybersecurity with hands-on experience in IT and security
-administration. Hands-on expertise in securing and managing cloud-based and internal IT infrastructure. 
+                         🌐🔒 Versatile IT professional with hands-on experience in system and security administration.
+Hands-on expertise in managing & troubleshooting cloud-based and internal IT infrastructure. 
 Experienced with SASE, SaaS, IaaS and modern endpoint management solutions to enhance security & operations. 
 Showcasing technical projects and automation scripts on GitHub. 
 Solid IT background with a B.Ed and specialized cybersecurity training.🛡️
